<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/joueur1"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/j1"
            />

        <EditText
            android:id="@+id/joueur2"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/j2"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/format_match"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/format"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/neuf"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/dixhuit"
                />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>